Fix test to use latest jquery

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="dfd_queue.js"></script>
 	<style type="text/css">
 		div { width:100px; height:100px; position:absolute; background:#3A3; }
@@ -64,8 +64,7 @@
 				
 			)
 			animator.queue(function(){
-				console.log('the end');
-				
+				mark_set('the end');
 			});
 		}
 		
